# multi-agent-research-writer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff_report.txt  ruff_report2.txt
.github/workflows/: ci.yml
backend/: main.py
backend/agents/: editor_agent.py  planner_agent.py  research_agent.py  research_writer_agent.py  reviewer_agent.py  writer_agent.py
backend/api/: routes.py
backend/core/: config.py  logger.py  startup_validation.py
backend/llm/: __init__.py  base.py  factory.py  ollama_provider.py
backend/memory/: memory_service.py
backend/models/: ollama_client.py
backend/prompts/: planner.md  prompt_loader.py
backend/schemas/: request_models.py  response_models.py
backend/search/: search_service.py
backend/services/: ai_service.py
backend/utils/: export_service.py
backend/workflows/: __init__.py  research_workflow.py
chroma/: chroma.sqlite3
docs/: api_reference.md  architecture.md  project_structure.md  release_checklist.md  screenshots.md  setup.md
frontend/: app.py
tests/: conftest.py  test_api.py  test_editor_agent.py  test_export_service.py  test_memory_service.py  test_optimization.py  test_planner_agent.py  test_production.py  test_research_agent.py  test_research_workflow.py  test_reviewer_agent.py  test_search_service.py  test_streamlit_frontend.py  test_writer_agent.py
