[project]
name = "multi-agent-research-writer"
version = "0.1.0"
description = "An AI-powered multi-agent system for conducting comprehensive research and generating publication-ready reports."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "streamlit>=1.32.0",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.30",
    "langchain-community>=0.0.28",
    "langchain-ollama>=0.1.0",
    "chromadb>=0.4.24",
    "duckduckgo-search>=5.3.0",
    "reportlab>=4.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4"]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
